src/objects/TR1__Candidate_Finder_Source_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__Candidate_Lookup_Field__c</fullName>
        <label>Candidate Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <label>Candidate Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Item_Value__c</fullName>
        <label>Item Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Target_Lookup_Field__c</fullName>
        <label>Target Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Candidate Finder Source Setting</label>
</CustomObject>